# swagger/swagger.json
@@ -27,6 +27,33 @@
                 }
             }
         },
+        "/api/listings/listing": {
+            "get": {
+                "description": "get a listing by id",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get a listing",
+                "operationId": "get-listing",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Listing ID",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/ListingResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/user": {
             "get": {
                 "description": "get user",
@@ -125,6 +152,21 @@
                     "items": {
                         "$ref": "#/definitions/database.Like"
                     }
+                }
+            }
+        },
+        "ListingResponse": {
+            "type": "object",
+            "required": [
+                "error",
+                "listing"
+            ],
+            "properties": {
+                "error": {
+                    "type": "string"
+                },
+                "listing": {
+                    "$ref": "#/definitions/database.Listing"
                 }
             }
         },
